push from office

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
 	  <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container-fluid px-md-5">
-	      <a class="navbar-brand" href="index.html">Judge <span>A Law Firm</span></a>
+	      <a class="navbar-brand" href="index.html"> M.R.B <span> Law Firm</span></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -39,7 +39,6 @@
 	          <li class="nav-item"><a href="practice-areas.html" class="nav-link">Practice Areas</a></li>
 	          <li class="nav-item"><a href="case.html" class="nav-link">Case Studies</a></li>
 	          <li class="nav-item"><a href="attorneys.html" class="nav-link">Attorneys</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
@@ -52,7 +51,7 @@
       <div class="container-fluid px-md-5">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true">
           <div class="col-md-6 ftco-animate">
-          	<h2 class="subheading">Product Liabilty &amp; Personal Injury</h2>
+          	<h2 class="subheading">Justice, Integrity, and Professionalism in Every Case</h2>
             <h1 class="mb-4">The Greatest &amp; Strongest Firm You Can Trust</h1>
             <p><a href="#" class="btn-custom mr-md-4">Get Legal Advice <span class="ion-ios-arrow-forward"></span></a> <a href="#" class="btn-custom">Request A Quote <span class="ion-ios-arrow-forward"></span></a></p>
           </div>
@@ -67,28 +66,28 @@
             <div class="media-body">
             	<span class="num">01</span>
               <h3 class="heading mb-3"><a href="#">Get Your Legal Advice</a></h3>
-              <p>Far far away, behind the word mountains, far from the countries</p>
+              <p>Receive clear, practical, and professional legal guidance tailored to your case</p>
             </div>
           </div>
           <div class="col-md-3 services align-self-stretch ftco-animate">
             <div class="media-body">
             	<span class="num">02</span>
               <h3 class="heading mb-3"><a href="#">Work with Expert Lawyers</a></h3>
-              <p>Far far away, behind the word mountains, far from the countries</p>
+              <p>Our experienced advocates and associates represent clients in all major courts of Pakistan. </p>
             </div>
           </div>
           <div class="col-md-3 services align-self-stretch ftco-animate">
             <div class="media-body">
             	<span class="num">03</span>
               <h3 class="heading mb-3"><a href="#">Have Great Discounted Rates</a></h3>
-              <p>Far far away, behind the word mountains, far from the countries</p>
+              <p>We offer cost-effective legal services without compromising on quality and professionalism.</p>
             </div>
           </div>
           <div class="col-md-3 services align-self-stretch ftco-animate">
             <div class="media-body">
             	<span class="num">04</span>
               <h3 class="heading mb-3"><a href="#">Review Your Case Documents</a></h3>
-              <p>Far far away, behind the word mountains, far from the countries</p>
+              <p>Get your contracts, petitions, and legal drafts carefully reviewed by qualified experts.</p>
             </div>
           </div>
         </div>
@@ -108,11 +107,11 @@
     			<div class="col-md-6 px-5 py-5">
     				<div class="row justify-content-start pt-3 pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-		          	<span class="subheading">Welcome to Judge</span>
+		          	<span class="subheading">Welcome to M.R.B Law Associates</span>
 		            <h2 class="mb-4">We Always Fight For Your Justice to Win</h2>
-		            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-		            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+		            <p>At M.R.B Law Associates, we are committed to protecting your rights and delivering justice with integrity and dedication. Our firm believes that every client deserves strong representation and honest legal guidance.</p>
+		            <p>Our team of skilled advocates represents clients before the Supreme Court, High Courts, Banking Courts, Labour Courts, and other legal forums across Pakistan. With years of proven experience and a strong record of success, we stand by our clients in the pursuit of fairness.</p>
+		            <p>Guided by the principles of both Pakistani legal tradition and Islamic justice, we fight tirelessly to secure the outcomes you deserve. Every case is handled with precision, professionalism, and respect for the law.</p>
 		            <div class="years d-flex">
 		            	<h4 class="number mr-2" data-number="40">0</h4>
 			            <h4>Years of Experienced</h4>
@@ -138,8 +137,8 @@
         			<div class="icon d-flex justify-content-center align-items-center">
         				<span class="flaticon-family"></span>
         			</div>
-        			<h3><a href="#">Family Law</a></h3>
-        			<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+        			<h3><a href="#">Civil & Family Matters</a></h3>
+        			<p>Property disputes, succession, guardianship, family law</p>
         		</div>
         	</div>
         	<div class="col-md-3 text-center">
@@ -147,8 +146,8 @@
         			<div class="icon d-flex justify-content-center align-items-center">
         				<span class="flaticon-auction"></span>
         			</div>
-        			<h3><a href="#">Business Law</a></h3>
-        			<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+        			<h3><a href="#">Banking Courts</a></h3>
+        			<p>Recovery suits, financial disputes, and commercial litigation.</p>
         		</div>
         	</div>
         	<div class="col-md-3 text-center">
@@ -156,8 +155,8 @@
         			<div class="icon d-flex justify-content-center align-items-center">
         				<span class="flaticon-shield"></span>
         			</div>
-        			<h3><a href="#">Insurance Law</a></h3>
-        			<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+        			<h3><a href="#">Corporate & Commercial Law</a></h3>
+        			<p>Contracts, regulatory compliance, arbitration, company disputes.</p>
         		</div>
         	</div>
         	<div class="col-md-3 text-center">
@@ -165,8 +164,8 @@
         			<div class="icon d-flex justify-content-center align-items-center">
         				<span class="flaticon-handcuffs"></span>
         			</div>
-        			<h3><a href="#">Criminal Law</a></h3>
-        			<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+        			<h3><a href="#">Criminal Litigation</a></h3>
+        			<p>Bail, trial, and appeals in criminal matters.</p>
         		</div>
         	</div>
         	<div class="col-md-3 text-center">
@@ -174,8 +173,8 @@
         			<div class="icon d-flex justify-content-center align-items-center">
         				<span class="flaticon-house"></span>
         			</div>
-        			<h3><a href="#">Property Law</a></h3>
-        			<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+        			<h3><a href="#">Labour Courts & Tribunals</a></h3>
+        			<p>Service matters, employment disputes, wrongful termination, reinstatement cases.</p>
         		</div>
         	</div>
         	<div class="col-md-3 text-center">
