--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     		<div class="row d-flex">
     			<div class="col-md-6 d-flex">
     				<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end" style="background-image:url(images/about.jpg);">
-    					<a href="https://vimeo.com/45830194" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
+    					<a href="https://www.pexels.com/download/video/7773313/" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
     						<span class="icon-play"></span>
     					</a>
     				</div>
@@ -183,7 +183,7 @@
         				<span class="flaticon-employee"></span>
         			</div>
         			<h3><a href="#">Employment Law</a></h3>
-        			<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+        			<p>We provide expert legal guidance on workplace disputes, wrongful termination, employment contracts, and labor rights to ensure fair treatment and compliance with Pakistani labor laws.</p>
         		</div>
         	</div>
         	<div class="col-md-3 text-center">
@@ -192,7 +192,7 @@
         				<span class="flaticon-fire"></span>
         			</div>
         			<h3><a href="#">Fire Accident</a></h3>
-        			<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+        			<p>Our team assists victims of fire-related incidents by pursuing rightful compensation, insurance claims, and accountability, ensuring justice and financial recovery.</p>
         		</div>
         	</div>
         	<div class="col-md-3 text-center">
@@ -201,7 +201,7 @@
         				<span class="flaticon-money"></span>
         			</div>
         			<h3><a href="#">Financial Law</a></h3>
-        			<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+        			<p>We advise individuals and businesses on banking disputes, loan settlements, financial fraud, and regulatory compliance, safeguarding your financial interests with precision.</p>
         		</div>
         	</div>
         </div>
@@ -222,20 +222,20 @@
 	            <div class="flipper">
 	              <div class="front" style="background-image: url(/images/person_1.jpg);">
 	                <div class="box">
-	                  <h2>Richard Anderson</h2>
+	                  <h2>Matloob Hussain Qureshi</h2>
 	                  <p>Civil Lawyer</p>
 	                </div>
 	              </div>
 	              <div class="back">
 	                <!-- back content -->
 	                <blockquote>
-	                  <p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text &rdquo;</p>
+	                  <p>&ldquo; Our attorney handles property, contract, family, and inheritance matters with skill and dedication, ensuring clients get fair and effective legal solutions. &rdquo;</p>
 	                </blockquote>
 	                <div class="author d-flex">
 	                  <div class="image align-self-center">
 	                    <img src="images/person_1.jpg" alt="">
 	                  </div>
-	                  <div class="name align-self-center ml-3">Richard Anderson <span class="position">Civil Lawyer</span></div>
+	                  <div class="name align-self-center ml-3">Matloob Hussain Qureshi <span class="position">Civil Lawyer</span></div>
 	                </div>
 	              </div>
 	            </div>
@@ -246,20 +246,20 @@
 	            <div class="flipper">
 	              <div class="front" style="background-image: url(/images/person_2.jpg);">
 	                <div class="box">
-	                  <h2>Jefford Maxillin</h2>
-	                  <p>Business Lawyer</p>
+	                  <h2>Rehman Ghani Khattak</h2>
+	                  <p>Criminal Law Expert </p>
 	                </div>
 	              </div>
 	              <div class="back">
 	                <!-- back content -->
 	                <blockquote>
-	                  <p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text &rdquo;</p>
+	                  <p>&ldquo;Specializes in criminal cases including bail, trial defense, and appeals, ensuring strong representation and protection of clients’ rights. &rdquo;</p>
 	                </blockquote>
 	                <div class="author d-flex">
 	                  <div class="image align-self-center">
 	                    <img src="images/person_2.jpg" alt="">
 	                  </div>
-	                  <div class="name align-self-center ml-3">Jefford Maxillin<span class="position">Business Lawyer</span></div>
+	                  <div class="name align-self-center ml-3">Rehman Ghani Khattak <span class="position">Criminal Law Expert </span></div>
 	                </div>
 	              </div>
 	            </div>
@@ -270,20 +270,20 @@
 	            <div class="flipper">
 	              <div class="front" style="background-image: url(/images/person_3.jpg);">
 	                <div class="box">
-	                  <h2>Carlos Obing</h2>
-	                  <p>Criminal Defense</p>
+	                  <h2>Muhammad Sharif Khanzada</h2>
+	                  <p>Family Law Expert</p>
 	                </div>
 	              </div>
 	              <div class="back">
 	                <!-- back content -->
 	                <blockquote>
-	                  <p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text &rdquo;</p>
+	                  <p>&ldquo;Handles divorce, child custody, inheritance, and other family disputes with care and commitment, ensuring fair solutions for clients. &rdquo;</p>
 	                </blockquote>
 	                <div class="author d-flex">
 	                  <div class="image align-self-center">
 	                    <img src="images/person_3.jpg" alt="">
 	                  </div>
-	                  <div class="name align-self-center ml-3">Carlos Obing <span class="position">Criminal Defense</span></div>
+	                  <div class="name align-self-center ml-3">Muhammad Sharif Khanzada <span class="position">Family Law Expert</span></div>
 	                </div>
 	              </div>
 	            </div>
@@ -294,20 +294,20 @@
 	            <div class="flipper">
 	              <div class="front" style="background-image: url(/images/person_4.jpg);">
 	                <div class="box">
-	                  <h2>Nathan Smith</h2>
-	                  <p>Insurance Lawyer</p>
+	                  <h2>Usman Khan </h2>
+	                  <p>Labour Law & Tribunals Expert</p>
 	                </div>
 	              </div>
 	              <div class="back">
 	                <!-- back content -->
 	                <blockquote>
-	                  <p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text &rdquo;</p>
+	                  <p>&ldquo;represents clients in labour courts and tribunals, dealing with employment disputes, wrongful termination, and workplace rights with dedication. &rdquo;</p>
 	                </blockquote>
 	                <div class="author d-flex">
 	                  <div class="image align-self-center">
 	                    <img src="images/person_4.jpg" alt="">
 	                  </div>
-	                  <div class="name align-self-center ml-3">Nathan Smith <span class="position">Insurance Lawyer</span></div>
+	                  <div class="name align-self-center ml-3">Usman Khan <span class="position">Labour Law & Tribunals Expert</span></div>
 	                </div>
 	              </div>
 	            </div>
