--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         	<div class="col-lg-3 col-sm-6">
         		<div class="block-2 ftco-animate">
 	            <div class="flipper">
-	              <div class="front" style="background-image: url(/images/person_1.jpg);">
+	              <div class="front" style="background-image: url(images/person_1.jpg);">
 	                <div class="box">
 	                  <h2>Matloob Hussain Qureshi</h2>
 	                  <p>Civil Lawyer</p>
@@ -244,7 +244,7 @@
         	<div class="col-lg-3 col-sm-6">
         		<div class="block-2 ftco-animate">
 	            <div class="flipper">
-	              <div class="front" style="background-image: url(/images/person_2.jpg);">
+	              <div class="front" style="background-image: url(images/person_2.jpg);">
 	                <div class="box">
 	                  <h2>Rehman Ghani Khattak</h2>
 	                  <p>Criminal Law Expert </p>
@@ -268,7 +268,7 @@
         	<div class="col-lg-3 col-sm-6">
         		<div class="block-2 ftco-animate">
 	            <div class="flipper">
-	              <div class="front" style="background-image: url(/images/person_3.jpg);">
+	              <div class="front" style="background-image: url(images/person_3.jpg);">
 	                <div class="box">
 	                  <h2>Muhammad Sharif Khanzada</h2>
 	                  <p>Family Law Expert</p>
@@ -277,6 +277,7 @@
 	              <div class="back">
 	                <!-- back content -->
 	                <blockquote>
+	                  <p>&ldquo;Handles divorce, child custody, inheritance, and other family disputes with care and commitment, ensuring fair solutions for clients. &rdquo;</p>
 	                  <p>&ldquo;Handles divorce, child custody, inheritance, and other family disputes with care and commitment, ensuring fair solutions for clients. &rdquo;</p>
 	                </blockquote>
 	                <div class="author d-flex">
@@ -292,7 +293,7 @@
         	<div class="col-lg-3 col-sm-6">
         		<div class="block-2 ftco-animate">
 	            <div class="flipper">
-	              <div class="front" style="background-image: url(/images/person_4.jpg);">
+	              <div class="front" style="background-image: url(images/person_4.jpg);">
 	                <div class="box">
 	                  <h2>Usman Khan </h2>
 	                  <p>Labour Law & Tribunals Expert</p>
